Add CSS changes for conditional buy-gem modal

--- a/website/public/css/shared.styl
+++ b/website/public/css/shared.styl
@@ -10,10 +10,43 @@
     th.feature-name
       text-align center
       font-weight: bold
+
 .dashed-underline
   border-bottom:1px dashed #000
   text-decoration:none
   cursor pointer
+
+.form-inline .form-control
+  padding:6px
+
+p.resubscribe
+  margin-top:20px
+
+.buy-gems a.purchase
+  height:25px
+  line-height:12px
+  font-size:12px
+  margin:5px
+
+p.resubscribe a.purchase
+  display:block
+
+.buy-gems button.customize-option
+  position:relative
+
+.buy-gems .stack-count
+  position:absolute
+  bottom:-6px
+  right:-9px
+
+.buy-gems .gem-count-popover
+  display:block;
+
+.buy-gems h3
+  margin-top:0px
+
+.buy-gems .well
+  margin-top:15px
 
 // Required by angular-ui-bootstrap
 .nav, .pagination, .carousel, .panel-title a
