Added specificity to CSS, removed exxtra line

--- a/website/public/css/shared.styl
+++ b/website/public/css/shared.styl
@@ -14,9 +14,9 @@
 .dashed-underline
   border-bottom:1px dashed #000
   text-decoration:none
-  cursor pointer
+  cursor: pointer
 
-.form-inline .form-control
+.buy-gems .form-inline .form-control
   padding:6px
 
 p.resubscribe
