style(subscriptions): Gem layout feedback

--- a/website/public/css/shared.styl
+++ b/website/public/css/shared.styl
@@ -48,6 +48,10 @@ p.resubscribe a.purchase
 .buy-gems .well
   margin-top:15px
 
+.noninteractive-button
+  padding: 0.5em
+  margin-right: 0.5em
+
 // Required by angular-ui-bootstrap
 .nav, .pagination, .carousel, .panel-title a
   cursor: pointer
